<!--
  ~ Copyright (c) 2023 The Rockstar authors and contributors.
  ~ Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
  -->

<resources>
  <string name="app_name">Rockstar</string>

  <!-- Feature labels -->
  <string name="label_for_you">For You</string>
  <string name="label_songs">Songs</string>
  <string name="label_albums">Albums</string>
  <string name="label_artists">Artists</string>
  <string name="label_playlists">Playlists</string>
  <string name="label_genres">Genres</string>
  <string name="label_folders">Folders</string>
  <string name="label_search">Search</string>
  <string name="label_settings">Settings</string>

  <plurals name="number_of_songs">
    <item quantity="one">%d song</item>
    <item quantity="other">%d songs</item>
  </plurals>

</resources>
