<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 The Rockstar authors and contributors.
  ~ Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/navigation_main"
  app:startDestination="@id/fragment_for_you">

  <fragment
    android:id="@+id/fragment_for_you"
    android:name="app.rockstar.feature.foryou.ForYouFragment"
    android:label="@string/label_for_you"
    tools:layout="@layout/fragment_for_you" />

  <fragment
    android:id="@+id/fragment_songs"
    android:name="app.rockstar.feature.songs.list.SongsFragment"
    android:label="@string/label_songs"
    tools:layout="@layout/fragment_songs" />

  <fragment
    android:id="@+id/fragment_albums"
    android:name="app.rockstar.feature.albums.list.AlbumsFragment"
    android:label="@string/label_albums"
    tools:layout="@layout/fragment_albums" />

  <fragment
    android:id="@+id/fragment_artists"
    android:name="app.rockstar.feature.artists.list.ArtistsFragment"
    android:label="@string/label_artists"
    tools:layout="@layout/fragment_artists" />

  <fragment
    android:id="@+id/fragment_playlists"
    android:name="app.rockstar.feature.playlists.PlaylistsFragment"
    android:label="@string/label_playlists"
    tools:layout="@layout/fragment_playlists" />

  <fragment
    android:id="@+id/fragment_genres"
    android:name="app.rockstar.feature.genres.list.GenresFragment"
    android:label="@string/label_genres"
    tools:layout="@layout/fragment_genres" />

  <fragment
    android:id="@+id/fragment_folders"
    android:name="app.rockstar.feature.folders.FoldersFragment"
    android:label="@string/label_folders"
    tools:layout="@layout/fragment_folders" />

  <fragment
    android:id="@+id/fragment_search"
    android:name="app.rockstar.feature.search.SearchFragment"
    android:label="@string/label_search"
    tools:layout="@layout/fragment_search" />

  <fragment
    android:id="@+id/fragment_settings"
    android:name="app.rockstar.feature.settings.SettingsFragment"
    android:label="@string/label_settings"
    tools:layout="@layout/fragment_settings" />

</navigation>
