<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 The Rockstar authors and contributors.
  ~ Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/fragment_for_you"
    android:icon="@drawable/asd_for_you"
    android:title="@string/label_for_you" />

  <item
    android:id="@+id/fragment_songs"
    android:icon="@drawable/asd_song"
    android:title="@string/label_songs" />

  <item
    android:id="@+id/fragment_albums"
    android:icon="@drawable/asd_album"
    android:title="@string/label_albums" />

  <item
    android:id="@+id/fragment_artists"
    android:icon="@drawable/asd_artist"
    android:title="@string/label_artists" />

  <item
    android:id="@+id/fragment_playlists"
    android:icon="@drawable/asd_playlist"
    android:title="@string/label_playlists" />
</menu>
